Refines home page styles.

--- a/src/components/ContentSeparator.module.scss
+++ b/src/components/ContentSeparator.module.scss
@@ -4,10 +4,7 @@
     border: 0;
     border-top: 1px solid $_gray-89;
     display: flex;
-    margin-bottom: 0;
-    margin-left: 5.5rem;
-    margin-right: 5.5rem;
-    margin-top: 0;
+    margin: 0;
     padding: 0;
-    width: calc(100% - 11rem);
+    width: 100%;
 }
