--- a/src/components/MetadataItem.module.scss
+++ b/src/components/MetadataItem.module.scss
@@ -1,13 +1,20 @@
 @import '../styles/colors';
 
 .metadataItem {
-    display: inline-block;
+    align-items: stretch;
+    display: flex;
+    flex-direction: row;
 
     &::after {
         color: $color-ui-caption-separator;
         content: '•';
+        font-size: 1.1em;
+        font-weight: 500;
+        line-height: calc(13 / 11);
+        margin-bottom: -0.3rem;
         margin-left: 0.8rem;
         margin-right: 0.8rem;
+        margin-top: -0.2rem;
     }
 
     &:only-child {
