--- a/src/components/PageDocument.module.scss
+++ b/src/components/PageDocument.module.scss
@@ -39,7 +39,7 @@
         margin-top: 4.6rem;
     }
 
-    .content {
+    .article {
         font-family: $font-text-sans;
         font-size: 1.7em;
         line-height: 1.7;
