--- a/src/components/Paginator.module.scss
+++ b/src/components/Paginator.module.scss
@@ -1,43 +1,65 @@
 @import '../styles/colors';
 @import '../styles/fonts';
 
+@mixin container-row-baseline {
+    align-items: baseline;
+    display: flex;
+    flex-direction: row;
+}
+
+@mixin text {
+    font-size: 1.1em;
+    font-weight: 500;
+    line-height: 1.18;
+}
+
 .paginator {
-    margin-left: 5.5rem;
-    margin-right: 5.5rem;
-    margin-bottom: 5.2rem;
+    @include container-row-baseline;
 
     .previousPageTitle {
-        display: inline-block;
+        @include container-row-baseline;
+
         margin-right: 1.3rem;
         text-transform: uppercase;
 
         a::before {
+            @include text;
+
             content: "<";
+            margin-bottom: -0.3rem;
             margin-right: 0.5rem;
+            margin-top: -0.2rem;
             vertical-align: 0.05rem;
         }
     }
 
     .pageIndicator {
-        display: inline-block;
+        @include container-row-baseline;
+
         color: $color-ui-caption-secondary;
+        display: flex;
     }
 
     .nextPageTitle {
-        display: inline-block;
+        @include container-row-baseline;
+
         margin-left: 1.3rem;
         text-transform: uppercase;
 
         a::after {
+            @include text;
+
             content: ">";
+            margin-bottom: -0.3rem;
             margin-left: 0.5rem;
+            margin-top: -0.2rem;
             vertical-align: 0.05rem;
         }
     }
 
     a {
-        text-decoration: none;
         color: $color-ui-caption-primary;
+        text-decoration: none;
         transition: color 0.3s ease-in-out;
 
         &:visited {
@@ -52,8 +74,8 @@
     }
 
     span {
-        font-weight: 500;
-        font-size: 1.1em;
-        line-height: 1.18;
+        @include text;
+        margin-bottom: -0.3rem;
+        margin-top: -0.2rem;
     }
 }
