--- a/src/components/Taxonomy.module.scss
+++ b/src/components/Taxonomy.module.scss
@@ -1,44 +1,62 @@
 @import '../styles/colors';
 
-.taxonomy {
-    display: inline-block;
-
-    span {
-        font-size: 1.1em;
-        font-weight: 500;
-        line-height: 1.18;
-        text-transform: uppercase;
-    }
+@mixin container-row-baseline {
+    align-items: baseline;
+    display: flex;
+    flex-direction: row;
 }
 
-.taxonomyName {
+@mixin text {
     color: $color-ui-caption-label;
-    display: inline-block;
+    font-size: 1.1em;
+    font-weight: 500;
+    line-height: calc(13 / 11);
+    margin-bottom: -0.3rem;
+    margin-top: -0.2rem;
+    text-transform: uppercase;
+}
 
-    &::after {
-        content: "";
-        display: inline-block;
-        width: 0.1rem;
-        height: 0.8rem;
-        margin-left: 0.5rem;
-        margin-right: 0.5rem;
-        background: $color-ui-caption-separator;
+.taxonomy {
+    @include container-row-baseline;
+
+    .taxonomyName {
+        @include container-row-baseline;
+
+        .taxonomyNameContent {
+            @include text;
+        }
+
+        &::after {
+            background: $color-ui-caption-separator;
+            content: "";
+            height: 0.8rem;
+            margin-left: 0.5rem;
+            margin-right: 0.5rem;
+            width: 0.1rem;
+        }
     }
-}
 
-.taxonomyItemList {
-    display: inline-block;
-    margin: 0;
-    padding: 0;
-}
+    .taxonomyItemList {
+        @include container-row-baseline;
 
-.taxonomyItem {
-    display: inline-block;
-    margin: 0;
-    margin-right: 0.8rem;
-    padding: 0;
+        list-style: none;
+        margin: 0;
+        padding: 0;
 
-    &:last-child {
-        margin-right: 0;
+        .taxonomyItem {
+            @include container-row-baseline;
+
+            margin: 0;
+            margin-right: 0.8rem;
+            padding: 0;
+
+            &:last-child {
+                margin-right: 0;
+            }
+
+            .taxonomyItemContent {
+                @include text;
+            }
+        }
     }
 }
