Refines styles for post header.

--- a/src/components/MorePostItem.module.scss
+++ b/src/components/MorePostItem.module.scss
@@ -2,7 +2,7 @@
 @import '../styles/colors';
 
 .morePostItem {
-    .caption {
+    .metadata {
         color: $color-tint;
         display: block;
         font-family: $font-ui-sans;
