--- a/src/components/PageDocument.module.scss
+++ b/src/components/PageDocument.module.scss
@@ -27,15 +27,15 @@
         }
     }
 
-    .caption {
+    .metadata {
         margin-top: 4rem;
     }
 
-    .title + .caption {
+    .title + .metadata {
         margin-top: 4.3rem;
     }
 
-    .subtitle + .caption {
+    .subtitle + .metadata {
         margin-top: 4.6rem;
     }
 
