--- a/src/components/PostHeader.module.scss
+++ b/src/components/PostHeader.module.scss
@@ -1,30 +1,62 @@
+@import '../styles/colors';
+@import '../styles/fonts';
+
+@mixin container-column-baseline {
+    align-self: baseline;
+    display: flex;
+    flex-direction: column;
+}
+
+@mixin container-row-baseline {
+    align-self: baseline;
+    display: flex;
+    flex-direction: row;
+}
+
 .title {
-    color: $color-content-headline-primary;
-    font-family: $font-text-serif;
-    font-size: 4.4em;
-    font-weight: 300;
-    line-height: calc(52 / 44);
+    @include container-column-baseline;
+
     margin: 0;
+
+    h1 {
+        @include container-column-baseline;
+
+        color: $color-content-headline-primary;
+        font-family: $font-text-serif;
+        font-size: 4.4em;
+        font-weight: 300;
+        line-height: calc(52 / 44);
+        margin-bottom: -1.4rem;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: -0.7rem;
+    }
 }
 
 .subtitle {
-    color: $color-content-headline-secondary;
-    font-family: $font-text-serif;
-    font-size: 2.8em;
-    font-weight: 300;
-    line-height: calc(41 / 28);
+    @include container-column-baseline;
+
     margin: 0;
-    margin-top: 0.5rem;
+    margin-top: 3.4rem;
+
+    h2 {
+        @include container-column-baseline;
+
+        color: $color-content-headline-secondary;
+        font-family: $font-text-serif;
+        font-size: 2.8em;
+        font-weight: 300;
+        line-height: calc(41 / 28);
+        margin-bottom: -1.3rem;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: -1.5rem;
+    }
 }
 
-.caption {
+.metadata {
+    @include container-row-baseline;
+
     margin: 0;
-}
-
-.title + .caption {
-    margin-top: 3.9rem;
-}
-
-.subtitle + .caption {
-    margin-top: 4rem;
+    margin-top: 5.5rem;
 }
