Refines styles for more posts in post page.

--- a/src/components/Main.module.scss
+++ b/src/components/Main.module.scss
@@ -135,7 +135,7 @@
     }
 
     .content {
-        align-items: flex-start;
+        align-items: stretch;
         display: flex;
         flex-direction: column;
         flex-shrink: 0;
