--- a/src/components/MorePosts.module.scss
+++ b/src/components/MorePosts.module.scss
@@ -1,32 +1,23 @@
 @import '../styles/colors';
 
-.morePostsContainer {
+.morePosts {
+    align-items: stretch;
     display: flex;
+    flex-direction: row;
     margin-bottom: 0;
-    margin-left: 5.5rem;
-    margin-right: 5.5rem;
     margin-top: 0;
-    padding-bottom: 5.2rem;
 
-    .morePostItemContainer {
-        display: inline-block;
+    .morePostItem {
+        align-items: stretch;
+        display: flex;
+        margin-bottom: 5.5rem;
+        margin-top: 3.4rem;
+        flex-direction: column;
         margin-right: 3.4rem;
-        width: calc(50% - 3.4rem);
+        min-width: calc(50% - 3.4rem);
 
         &:last-child {
             margin-right: 0;
         }
-    }
-
-    .separator {
-        border: 0;
-        border-top: 1px solid $_gray-89;
-        display: flex;
-        margin-bottom: 0;
-        margin-left: 5.5rem;
-        margin-right: 5.5rem;
-        margin-top: 0;
-        padding: 0;
-        width: calc(100% - 11rem);
     }
 }
