--- a/src/components/PostBody.module.scss
+++ b/src/components/PostBody.module.scss
@@ -1,34 +1,13 @@
 @import '../styles/fonts';
 @import '../styles/colors';
 
-.article {
+.content {
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
     font-family: $font-text-serif;
     font-size: 1.7em;
     line-height: 1.7;
-    margin-bottom: 5.3rem;
+    margin-bottom: 5.5rem;
     margin-top: 5.5rem;
-
-    a {
-        color: $color-tint;
-        text-decoration: underline;
-        transition: color 0.3s ease-in-out;
-
-        &:visited {
-            color: $color-tint;
-        }
-
-        &:hover,
-        &:visited:hover {
-            color: $color-hover;
-            transition: color 0.3s ease-in-out;
-        }
-    }
-}
-
-.tags {
-    margin-bottom: 5.5rem;
-}
-
-.license {
-    margin-bottom: 5.5rem;
 }
