Fixes style of a tag in more post item.

--- a/src/components/MorePostItem.module.scss
+++ b/src/components/MorePostItem.module.scss
@@ -36,7 +36,8 @@
             margin: 0;
 
             a {
-                display: inline-block;
+                @include container-column-stretch;
+
                 text-decoration: none;
 
                 @mixin heading {
