--- a/src/components/Footnotes.module.scss
+++ b/src/components/Footnotes.module.scss
@@ -2,45 +2,65 @@
 @import '../styles/colors';
 
 .footnotes {
-    margin-top: 2.4rem;
-    margin-bottom: 5.1rem;
     color: $color-content-footer-text;
+    margin: 0;
 
     .footnoteList {
-        padding: 0;
         list-style: none;
+        margin: 0;
+        padding: 0;
 
-        .footnoteListItem {
-            margin-top: 3.9rem;
+        .footnoteItem {
+            align-items: stretch;
+            display: flex;
+            flex-direction: column;
+            margin-bottom: 3.4rem;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
 
             .footnoteParagraph {
-                margin-top: 1.9rem;
-                margin-bottom: 0;
-                font-size: calc(15em / 17);
-                line-height: call(29/15);
-                font-family: $font-text-sans;
+                align-items: baseline;
                 color: $color-content-footer-text;
-            }
-
-            .footnoteLabel {
+                display: flex;
+                flex-direction: row;
                 font-size: calc(15em / 17);
-                font-family: $font-text-monospaced;
-                font-weight: 500;
-                margin-right: 0.8rem;
+                line-height: call(29 / 15);
+                margin-bottom: 2.1rem;
+                margin-top: 0;
 
-                &::before {
-                    content: '[';
+                &:last-child {
+                    margin-bottom: 0;
                 }
 
-                &::after {
-                    content: ']';
-                }
-            }
+                .footnoteLabel {
+                    font-family: $font-text-monospaced;
+                    font-weight: 500;
+                    margin-bottom: -0.9rem;
+                    margin-top: -0.8rem;
 
-            .footnoteBackReference {
-                font-size: calc(15em / 17);
-                font-family: $font-text-monospaced;
-                margin-left: 0.5rem;
+                    &::before {
+                        content: '[';
+                    }
+
+                    &::after {
+                        content: ']';
+                    }
+                }
+
+                .footnoteSpan {
+                    font-family: $font-text-sans;
+                    margin-bottom: -0.9rem;
+                    margin-top: -0.8rem;
+                }
+
+                .footnoteBackReference {
+                    font-family: $font-text-monospaced;
+                    margin-bottom: -0.9rem;
+                    margin-left: 0.5rem;
+                    margin-top: -0.8rem;
+                }
             }
         }
     }
