--- a/src/components/Heading.module.scss
+++ b/src/components/Heading.module.scss
@@ -3,59 +3,82 @@
 
 @mixin heading {
     color: $color-content-heading;
+    display: block;
     margin: 0;
 }
 
-.h1 {
-    @include heading;
+.h {
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    font-size: 1em;
+    margin-bottom: 3.4rem;
+    margin-top: 2.1rem;
 
-    font-family: $font-text-sans;
-    font-size: calc(3.2em * 10 / 17);
-    font-weight: 400;
-    line-height: calc(42 / 32);
-}
+    .h1 {
+        @include heading;
 
-.h2 {
-    @include heading;
+        font-family: $font-text-sans;
+        font-size: calc(3.2em * 10 / 17);
+        font-weight: 400;
+        line-height: calc(42 / 32);
+        margin-bottom: -1rem;
+        margin-top: -0.9rem;
+    }
 
-    font-family: $font-text-sans;
-    font-size: calc(2.6em * 10 / 17);
-    font-weight: 500;
-    line-height: calc(37 / 26);
-}
+    .h2 {
+        @include heading;
 
-.h3 {
-    @include heading;
+        font-family: $font-text-sans;
+        font-size: calc(2.6em * 10 / 17);
+        font-weight: 500;
+        line-height: calc(37 / 26);
+        margin-bottom: -0.9rem;
+        margin-top: -1.2rem;
+    }
 
-    font-family: $font-text-sans;
-    font-size: calc(2.1em * 10 / 17);
-    font-weight: 600;
-    line-height: calc(34 / 21);
-}
+    .h3 {
+        @include heading;
 
-.h4 {
-    @include heading;
+        font-family: $font-text-sans;
+        font-size: calc(2.1em * 10 / 17);
+        font-weight: 600;
+        line-height: calc(34 / 21);
+        margin-bottom: -1rem;
+        margin-top: -0.9rem;
+    }
 
-    font-family: $font-text-sans;
-    font-size: calc(1.9em * 10 / 17);
-    font-weight: 600;
-    line-height: calc(32 / 19);
-}
+    .h4 {
+        @include heading;
 
-.h5 {
-    @include heading;
+        font-family: $font-text-sans;
+        font-size: calc(1.9em * 10 / 17);
+        font-weight: 600;
+        line-height: calc(32 / 19);
+        margin-bottom: -0.9rem;
+        margin-top: -1.2rem;
+    }
 
-    font-family: $font-text-sans;
-    font-size: calc(1.7em * 10 / 17);
-    font-weight: 700;
-    line-height: calc(31 / 17);
-}
+    .h5 {
+        @include heading;
 
-.h6 {
-    @include heading;
+        font-family: $font-text-sans;
+        font-size: calc(1.7em * 10 / 17);
+        font-weight: 700;
+        line-height: calc(31 / 17);
+        margin-bottom: -0.9rem;
+        margin-top: -1.2rem;
+    }
 
-    font-family: $font-text-sans;
-    font-size: calc(1.5em * 10 / 17);
-    font-weight: 800;
-    line-height: calc(30 / 15);
+    .h6 {
+        @include heading;
+
+        font-family: $font-text-sans;
+        font-size: calc(1.5em * 10 / 17);
+        font-weight: 800;
+        line-height: calc(30 / 15);
+        margin-bottom: -1rem;
+        margin-top: -1.1rem;
+    }
+
 }
