--- a/src/components/List.module.scss
+++ b/src/components/List.module.scss
@@ -1,16 +1,17 @@
 @import '../styles/colors';
 @import '../styles/fonts';
 
-.orderedList {
+.list {
+    align-items: stretch;
     color: $color-content-body;
     counter-reset: ordered-list;
+    display: flex;
+    flex-direction: column;
     list-style: none;
+    margin: 0;
     padding: 0;
+}
 
-    li {
-        display: table;
-        line-height: calc(29 / 17);
-        margin: 0;
-        margin-bottom: 1.3rem;
-    }
+.orderedList {
+    counter-reset: ordered-list;
 }
