--- a/src/components/MathBlock.module.scss
+++ b/src/components/MathBlock.module.scss
@@ -2,6 +2,7 @@
 
 .math {
     background-color: $color-content-math-block-background;
+    margin-bottom: 3.4rem;
     margin-left: -2.1rem;
     margin-right: -2.1rem;
     -ms-overflow-style: none;
