--- a/src/components/Paragraph.module.scss
+++ b/src/components/Paragraph.module.scss
@@ -1,7 +1,22 @@
 @import '../styles/colors';
+@import '../styles/fonts';
 
-.paragraph {
-    color: $color-content-body;
+.paragraphWrapper {
+    align-items: stretch;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3.4rem;
     margin-left: 0;
     margin-right: 0;
+    margin-top: 0;
+
+    .serif {
+        display: block;
+        margin-bottom: -1rem;
+        margin-top: -1.1rem;
+    }
+
+    .sans {
+
+    }
 }
