--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -5,6 +5,7 @@
     -ms-overflow-style: none;
     overflow-x: scroll;
     width: 100%;
+    margin-bottom: 3.4rem;
 
     .table {
         border-collapse: collapse;
